@@ -3,6 +3,7 @@ Version 1.11.14+dev:
    * Updated translations: Portuguese
  * Miscellaneous and bug fixes:
    * Reallow selection of another unit on same side without deselect first
+   * Fix bug #22042: filesystem content disclosure issue affecting Lua APIs
 
 Version 1.11.14:
  * Campaigns:
